--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Exercice 1</h1>
     <button id="btn">Voir le résultat</button>
+    <h1>Exercice 2</h1>
     <script src="index.js"></script>
 </body>
 
